Fix Telemetry Checkbox in High Contrast Mode (#2956)

--- a/src/popup/Styles/popup.scss
+++ b/src/popup/Styles/popup.scss
@@ -31,6 +31,12 @@ div.insights-dialog-main-override.telemetry-permission-dialog {
         border-radius: 4px;
     }
 
+    .ms-Checkbox-checkmark {
+        @media screen and (-ms-high-contrast: active) {
+            color: inherit;
+        }
+    }
+
     .telemetry-permission-details {
         font-size: 14px;
     }
